<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alterar_meus_dados"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/altAddressName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/typeYourName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/altAddressAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/typeYourAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/altAddressBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/bairro"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/altAddressCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/city"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/altAddressPhone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/typeYourCellNumber"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:digits="1234567890+-() "
        android:inputType="number"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_altAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/shapelogin"/>



</LinearLayout>