<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_yourAddress"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_cadCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/seu_cep"
        android:inputType="number"
        android:maxLength="8"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>

    <Button
        android:id="@+id/btn_cep_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:onClick="verificarCepEmBranco"
        android:maxLength="8"
        android:background="@drawable/shapelogin"
        android:padding="15dp"
        style="@style/Button_Theme"
        android:shadowColor="@android:color/transparent"
        android:text="@string/proximo" />



</LinearLayout>