<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlayout_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/complete_address"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlayout_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cadBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bairro"
            android:textColorHint="@android:color/black"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>






    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_proximo"
        style="@style/Button_Theme"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_btn_proximo" />


</LinearLayout>