<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:padding="20dp">




    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_person"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadSenha"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cadRepetir"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:hint="@string/repeat_your_pass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/shapelogin"/>


</LinearLayout>